# MyPackage

./: README.md
MyPackage/: CMakeLists.txt
MyPackage/HelloPrinter/: CMakeLists.txt  HelloPrinter.cpp  HelloPrinter.h
ports/HelloPrinter/: portfile.cmake
ports/hello-printer/: portfile.cmake  vcpkg.json
vcpkg-registry/ports/: vcpkg.json
vcpkg-registry/ports/HelloPrinter/: portfile.cmake  vcpkg.json
vcpkg-registry/versions/H-/: HelloPrinter.json
versions/: baseline.json
versions/H-/: HelloPrinter.json  hello-printer.json
